[build-system]
requires = [
    "setuptools >= 40.8.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'



[project]
name = "pulp-docs"
version = "0.0.1"
readme = "README.md"
description = "Tool to aggregate Pulp documentation in one place."
dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-site-urls",
    "importlib_resources",
    "httpx",
    "rich",
]

[project.scripts]
pulp-docs = "pulp_docs.cli:main"



[tool.towncrier]
package = "pulp-docs"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
template = "CHANGES/.TEMPLATE.rst"

issue_format = "`#{issue} <https://github.com/pulp/pulp-docs/issues/{issue}>`__"


    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Misc"
        showcontent = false


[tool.black]
line-length = 100
target-version = ["py36", "py37"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | migrations
  | docs
)/
'''



